Убрал всплывающее окно с выбором города, изменил пароль developer

--- a/app/mod_tpl/domain.choose.tpl.html
+++ b/app/mod_tpl/domain.choose.tpl.html
@@ -61,8 +61,8 @@
                 <div class="modal-body">
                     <ul>
                         <foreach city_list>
-                            @if(d()->this->code == 'ufa'):
-                            <li><i class="mdi mdi-city-variant-outline"></i><a href="https://radugavkusaufa.ru/{url}">{.title}</a></li>
+                            @if(d()->this->code == 'kzn'):
+                            <li><i class="mdi mdi-city-variant-outline"></i><a href="https://wowpizza.ru/{url}">{.title}</a></li>
                             @else:
                             @if(d()->this->code != 'okt'):
                             <li><i class="mdi mdi-city-variant-outline"></i><a href="https://{.code}.{domain}/{url}">{.title}</a></li>
