Убрал ссылки на главной странице и поправил адрес в акциях

--- a/app/main.html
+++ b/app/main.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="yandex-verification" content="a61c38769b0f3bfb" />
 
-    <meta name="smartbanner:title" content="Приложение Аппетит">
+    <!--<meta name="smartbanner:title" content="Приложение Аппетит">
     <meta name="smartbanner:author" content="Доставка роллов и пиццы">
     <meta name="smartbanner:price" content="бесплатно">
     <meta name="smartbanner:price-suffix-google" content=" в Google Play">
@@ -20,7 +20,7 @@
     <meta name="smartbanner:icon-google" content="/images/appicon.svg">
     <meta name="smartbanner:button-url-apple" content="https://apps.apple.com/ru/app/аппетит-доставка-роллов-пиццы/id1558072639">
     <meta name="smartbanner:button-url-google" content="https://play.google.com/store/apps/details?id=appetit.app">
-    <meta name="smartbanner:enabled-platforms" content="android,ios">
+    <meta name="smartbanner:enabled-platforms" content="android,ios">-->
 
 
     <link rel="icon" href="/favicon.ico?4">
@@ -64,11 +64,11 @@
                 </div>
                 <div class="col-lg-10 col-md-10 text-right tr-menu-wrap">
                     <ul class="tr-menu">
-                        <li><a href="/security/">Ваша Безопасность</a></li>
+                        <!--<li><a href="/security/">Ваша Безопасность</a></li>
                         <li><a href="/news/">Новости</a></li>
                         <li><a href="/vakansii/">Вакансии</a></li>
                         <li><a href="{city.partners_link}" target="_blank">Реклама и партнерство</a></li>
-                        <li><a href="/about/">О нас</a></li>
+                        <li><a href="/about/">О нас</a></li>-->
                         <li><a href="/contacts/">Контакты</a></li>
                         @if($_COOKIE['likes']):
                         <li><a href="/favorites/" title="Избранное" class="favorites-active"><i class="mdi mdi-heart"></i></a></li>
@@ -207,10 +207,10 @@
                         <span itemprop="address">{city.address}</span>
                         <span class="furname">{city.ur_name}</span>
                     </p>
-                    <div class="mobile-app">
+                    <!--<div class="mobile-app">
                         <a href="https://play.google.com/store/apps/details?id=appetit.app" target="_blank" rel="nofollow" title="Get it on Google Play"><img src="/images/google-play.png" alt="google play"></a>
                         <a href="https://apps.apple.com/ru/app/аппетит-доставка-роллов-пиццы/id1558072639" target="_blank" rel="nofollow" title="Download on the App Store"><img src="/images/app-store-apple-logo.png" alt="app store"> </a>
-                    </div>
+                    </div>-->
                 </div>
                 <div class="f-social">
                     @if(d()->city->vk):
@@ -234,8 +234,8 @@
                         <li><a href="/sales/">Акции</a></li>
                         <li><a href="/delivery/" rel="nofollow">Доставка и оплата</a></li>
                         <li><a href="/contacts/" rel="nofollow">Контакты</a></li>
-                        <li><a href="/security/" rel="nofollow">Онлайн трансляция с кухни</a></li>
-                        <li><a href="/security/" rel="nofollow">Результаты лаб. анализов</a></li>
+                        <!--<li><a href="/security/" rel="nofollow">Онлайн трансляция с кухни</a></li>
+                        <li><a href="/security/" rel="nofollow">Результаты лаб. анализов</a></li>-->
                         <li><a href="/delivery-terms/" rel="nofollow">Узнайте условия доставки</a></li>
                         <li><a href="/orders_status/" rel="nofollow">Проверить статус заказа</a></li>
                     </ul>
@@ -250,13 +250,13 @@
                 <div class="f-block3">
                     <span class="foot-h3">Компания</span>
                     <ul>
-                        <li><a href="/vakansii/" rel="nofollow">Вакансии</a></li>
+                        <!--<li><a href="/vakansii/" rel="nofollow">Вакансии</a></li>
                         <li><a href="/about/" rel="nofollow">О нас</a></li>
                         <li><a href="{city.partners_link}" target="_blank" rel="nofollow">Реклама и партнерство</a></li>
                         <li><a href="/news/sotrudnichestvo-s-blogerami/" rel="nofollow">Сотрудничество с блогерами</a></li>
-                        <li><a href="/partnerstvo-pod-brendom-appetit/" rel="nofollow">Работай под брендом «Аппетит»</a></li>
+                        <li><a href="/partnerstvo-pod-brendom-appetit/" rel="nofollow">Работай под брендом «Аппетит»</a></li>-->
     <!--                    <li><a href="/franchise/" rel="nofollow">Инвестируй в кафе доставки</a></li>-->
-                        <li><a href="/news/" rel="nofollow">Новости</a></li>
+                        <!--<li><a href="/news/" rel="nofollow">Новости</a></li>-->
     <!--                    <li><a href="/faq/" rel="nofollow">Вопросы и ответы</a></li>-->
                         <li><a href="/requisites/" rel="nofollow">Реквизиты</a></li>
                         <li><a href="/personal/" rel="nofollow">Политика конфиденциальности</a></li>
@@ -297,13 +297,13 @@
         <ul class="nm-menu">
             <li><a href="/delivery/">Доставка и оплата</a></li>
             <li><a href="/otzyvy/">Отзывы</a></li>
-            <li><a href="/news/">Новости</a></li>
+            <!--<li><a href="/news/">Новости</a></li>-->
             <li><a href="/favorites/">Избранное</a></li>
             <li><a href="/orders_status/">Проверить статус заказа</a></li>
-            <li><a href="/security/">Ваша Безопасность</a></li>
+            <!--<li><a href="/security/">Ваша Безопасность</a></li>
             <li><a href="/vakansii/">Вакансии</a></li>
             <li><a href="/about/">О нас</a></li>
-            <li><a href="{city.partners_link}" target="_blank">Реклама и партнерство</a></li>
+            <li><a href="{city.partners_link}" target="_blank">Реклама и партнерство</a></li>-->
             <li><a href="/contacts/">Контакты</a></li>
         </ul>
         <form action="/search/" method="get" class="nm-form">
