Добавил описание продуктам, поправил стилистику

--- a/app/main.html
+++ b/app/main.html
@@ -8,27 +8,13 @@
     <meta name="description" content='{Seo.description}'/>
     <meta name="keywords" content='{Seo.keywords}'/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="yandex-verification" content="a61c38769b0f3bfb" />
-
-    <!--<meta name="smartbanner:title" content="Приложение Аппетит">
-    <meta name="smartbanner:author" content="Доставка роллов и пиццы">
-    <meta name="smartbanner:price" content="бесплатно">
-    <meta name="smartbanner:price-suffix-google" content=" в Google Play">
-    <meta name="smartbanner:price-suffix-apple" content=" в App Store">
-    <meta name="smartbanner:button" content="Загрузить">
-    <meta name="smartbanner:icon-apple" content="/images/appicon.svg">
-    <meta name="smartbanner:icon-google" content="/images/appicon.svg">
-    <meta name="smartbanner:button-url-apple" content="https://apps.apple.com/ru/app/аппетит-доставка-роллов-пиццы/id1558072639">
-    <meta name="smartbanner:button-url-google" content="https://play.google.com/store/apps/details?id=appetit.app">
-    <meta name="smartbanner:enabled-platforms" content="android,ios">-->
-
+    <meta name="yandex-verification" content="f38a632f6ad04295" />
 
     <link rel="icon" href="/favicon.ico?4">
 
     {city.ga_analytics}
     {city.gtm_head}
 </head>
-<!--<body class="ny-hidden" onunload="finalize();" data-code="{city.code}" data-city="{city.title}" data-region="{city.dadata_region}" data-dadata="{city.dadata_token}" data-promo-min-sum="{promo_min_sum}" data-promo-delivery="{promo_delivery}" data-promo-type="{promo.type}" data-sc-type="{city.send_code_type}">-->
 <body onunload="finalize();" data-code="{city.code}" data-city="{city.title}" data-region="{city.dadata_region}" data-dadata="{city.dadata_token}" data-promo-min-sum="{promo_min_sum}" data-promo-delivery="{promo_delivery}" data-promo-type="{promo.type}" data-sc-type="{city.send_code_type}">
 <div class="body-div">
     {city.gtm_body}
@@ -90,7 +76,7 @@
                 <div class="hm-logo-mobile">
                     <!--<img src="/images/hl-cat-xs.png" alt="" class="hl-cat wow zoomIn animated {hlhide}" data-wow-duration="1.2s" data-wow-delay="1.7s" />-->
                     <div class="hm-logo-bg-mobile-l"></div>
-                    <a href="/"><img src="{city.logo}" alt='Логотип "Аппетит"'/></a>
+                    <a href="/"><img src="{city.logo}" alt='Логотип "Wowpizza"'/></a>
                     <!--<a href="/"><img src="/images/ny-logo.png" alt='Логотип "Аппетит"'/></a>-->
                     <div class="hm-logo-bg-mobile-r"></div>
                     <!--<img src="/images/snowflakes-m.png" alt="" class="ny-snowflakes-m" />-->
@@ -121,7 +107,7 @@
                 <div class="hm-flex">
                     <div class="hm-logo">
                         <!--<img src="/images/hl-cat.png" alt="" class="hl-cat wow zoomIn animated" data-wow-duration="1.2s" data-wow-delay="1.7s" />-->
-                        <a href="/"><img src="{city.logo}" alt='Логотип "Аппетит"'/></a>
+                        <a href="/"><img src="{city.logo}" alt='Логотип "Wowpizza"'/></a>
                         <!--<a href="/"><img src="/images/ny-logo.png" alt='Логотип "Аппетит"' class="ny-show-6"/></a>-->
                         <div class="hm-logo-bg"></div>
                     </div>
@@ -199,7 +185,7 @@
         <div class="container">
             <div class="f-wrap">
                 <div class="f-logo-wrap">
-                    <a href="/"><img src="{city.logo}" alt='Логотип "Аппетит"' class="f-logo"></a>
+                    <a href="/"><img src="{city.logo}" alt='Логотип "Wowpizza"' class="f-logo"></a>
                     <p class="f-info" itemscope itemtype="http://schema.org/Organization">
                         <span class="none" itemprop="name">Доставка еды {city.name}</span>
                         <a href="tel:{city.phone}" onclick="ym({city.yandex_counter},'reachGoal','call-mobile');checkGetClient();"><span itemprop="telephone">{city.phone}</span></a><br>
@@ -272,7 +258,7 @@
         <span class="mdi mdi-arrow-left-thick nav-mobile-close ssm-toggle-nav"></span>
         <span class="nm-city-choose">Выберите город</span>
         <div class="nm-city">
-            <p onclick="tgl_citylist(this)"><img src="{city.logo2}" alt="Логотип Аппетит" /> <span>{city.title}</span><i class="mdi mdi-menu-down"></i></p>
+            <p onclick="tgl_citylist(this)"><img src="{city.logo2}" alt="Логотип Wowpizza" /> <span>{city.title}</span><i class="mdi mdi-menu-down"></i></p>
         </div>
         <ul class="nm-citylist">
         <foreach city_list>
