Вносил поправки, заменял Аппетит на WOW!Pizza

--- a/app/main.html
+++ b/app/main.html
@@ -8,7 +8,7 @@
     <meta name="description" content='{Seo.description}'/>
     <meta name="keywords" content='{Seo.keywords}'/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="yandex-verification" content="f38a632f6ad04295" />
+    <meta name="yandex-verification" content="dcd40d6b5674a34e" />
 
     <link rel="icon" href="/favicon.ico?4">
 
@@ -77,7 +77,7 @@
                     <!--<img src="/images/hl-cat-xs.png" alt="" class="hl-cat wow zoomIn animated {hlhide}" data-wow-duration="1.2s" data-wow-delay="1.7s" />-->
                     <div class="hm-logo-bg-mobile-l"></div>
                     <a href="/"><img src="{city.logo}" alt='Логотип "Wowpizza"'/></a>
-                    <!--<a href="/"><img src="/images/ny-logo.png" alt='Логотип "Аппетит"'/></a>-->
+                    <!--<a href="/"><img src="/images/ny-logo.png" alt='Логотип "WOW! Pizza"'/></a>-->
                     <div class="hm-logo-bg-mobile-r"></div>
                     <!--<img src="/images/snowflakes-m.png" alt="" class="ny-snowflakes-m" />-->
                 </div>
@@ -108,7 +108,7 @@
                     <div class="hm-logo">
                         <!--<img src="/images/hl-cat.png" alt="" class="hl-cat wow zoomIn animated" data-wow-duration="1.2s" data-wow-delay="1.7s" />-->
                         <a href="/"><img src="{city.logo}" alt='Логотип "Wowpizza"'/></a>
-                        <!--<a href="/"><img src="/images/ny-logo.png" alt='Логотип "Аппетит"' class="ny-show-6"/></a>-->
+                        <!--<a href="/"><img src="/images/ny-logo.png" alt='Логотип "WOW! Pizza"' class="ny-show-6"/></a>-->
                         <div class="hm-logo-bg"></div>
                     </div>
                     <!--<div class="hm-info hl-relative ny-relative">-->
@@ -193,10 +193,6 @@
                         <span itemprop="address">{city.address}</span>
                         <span class="furname">{city.ur_name}</span>
                     </p>
-                    <!--<div class="mobile-app">
-                        <a href="https://play.google.com/store/apps/details?id=appetit.app" target="_blank" rel="nofollow" title="Get it on Google Play"><img src="/images/google-play.png" alt="google play"></a>
-                        <a href="https://apps.apple.com/ru/app/аппетит-доставка-роллов-пиццы/id1558072639" target="_blank" rel="nofollow" title="Download on the App Store"><img src="/images/app-store-apple-logo.png" alt="app store"> </a>
-                    </div>-->
                 </div>
                 <div class="f-social">
                     @if(d()->city->vk):
@@ -240,7 +236,7 @@
                         <li><a href="/about/" rel="nofollow">О нас</a></li>
                         <li><a href="{city.partners_link}" target="_blank" rel="nofollow">Реклама и партнерство</a></li>
                         <li><a href="/news/sotrudnichestvo-s-blogerami/" rel="nofollow">Сотрудничество с блогерами</a></li>
-                        <li><a href="/partnerstvo-pod-brendom-appetit/" rel="nofollow">Работай под брендом «Аппетит»</a></li>-->
+                        <li><a href="/partnerstvo-pod-brendom-appetit/" rel="nofollow">Работай под брендом «WOW! Pizza»</a></li>-->
     <!--                    <li><a href="/franchise/" rel="nofollow">Инвестируй в кафе доставки</a></li>-->
                         <!--<li><a href="/news/" rel="nofollow">Новости</a></li>-->
     <!--                    <li><a href="/faq/" rel="nofollow">Вопросы и ответы</a></li>-->
