--- a/app/mod_admin/admin_hint.html
+++ b/app/mod_admin/admin_hint.html
@@ -7,7 +7,7 @@
 @elseif(d()->field_params[1] == 'GTM'):
 <div class="control-group">
     <div class="controls">
-    <p style="color:#666;">Экспортированные настройки, для корректной работы электронной торговли: <a href="/vendors/workspace.json" download>скачать</a>.<br>После импорта настроек необходимо изменить значение переменной UA-ID-Appetit на действующий Идентификатор отслеживания Google Analytics</p>
+    <p style="color:#666;">Экспортированные настройки, для корректной работы электронной торговли: <a href="/vendors/workspace.json" download>скачать</a>.<br>После импорта настроек необходимо изменить значение переменной UA-ID-WOWPIZZA на действующий Идентификатор отслеживания Google Analytics</p>
     </div>
 </div>
 @else:
