--- a/app/mod_cabinet/_balance.html
+++ b/app/mod_cabinet/_balance.html
@@ -8,7 +8,7 @@
         <div class="lk-pers-wrap">
             {{lk_alert_tpl}}
             <h1>Бонусные баллы</h1>
-            <p class="lk-clovo-poins">Количество баллов: <span>{.points}</span><button class="btn btn-warning uiballs" onclick="points_info_modal()">Условия начисления и использования баллов</button></p>
+            <p class="lk-clovo-poins">Количество баллов: <span>{.points}</span><!--<button class="btn btn-warning uiballs" onclick="points_info_modal()">Условия начисления и использования баллов</button>--></p>
             <div class="lk-bh" id="points-block">
                 <div class="lk-bh-row lk-bh-head">
                     <div><strong>Дата</strong></div>
