--- a/app/mod_pages/_about.html
+++ b/app/mod_pages/_about.html
@@ -3,7 +3,7 @@
     <div class="facts-about">
         <div class="one-facts">
             <i class="figure-facts"></i>
-            <h1>Два факта про Аппетит:</h1>
+            <h1>Два факта про WOW! Pizza:</h1>
             {.text}
         </div>
         <img src="/images/about/people.png" alt="" class="img-facts"/>
