--- a/app/mod_pages/_anketa.html
+++ b/app/mod_pages/_anketa.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Анкета оценки качества обслуживания / Аппетит</title>
+    <title>Анкета оценки качества обслуживания / WOW! Pizza</title>
     <style>
         .rating{
             margin:20px 0;
@@ -216,7 +216,7 @@
 <body style="font-family: Arial;">
 <div style="margin: 0 auto; float: none; padding: 0px; border: 1px solid #e1e1e1; width:100%; max-width:800px;">
     <div style="background: #b3de92; padding: 10px;">
-        <center><img src="/images/anketa-logo.png" ></center>
+        <center><img src="/images/wow-pizza-02.png" ></center>
     </div>
     <div style="background: #fff; padding: 30px 10px; text-align: left;">
 
@@ -368,7 +368,7 @@
                 <input type="text" name="order-taste-desc" placeholder="Мой ответ" />
             </div>
             <div class="margin" style="margin-bottom: 20px">
-                <strong>Что бы Вы хотели порекомендовать, чтобы «Аппетит» стала для Вас идеальной компанией?</strong><br>
+                <strong>Что бы Вы хотели порекомендовать, чтобы «WOW! Pizza» стала для Вас идеальной компанией?</strong><br>
                 <input type="text" name="ideal" placeholder="Мой ответ" />
             </div>
             <div class="margin" style="margin-bottom: 20px">
