--- a/app/mod_pages/_anketa_finish.html
+++ b/app/mod_pages/_anketa_finish.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Анкета оценки качества обслуживания / Аппетит</title>
+    <title>Анкета оценки качества обслуживания / WOW! Pizza</title>
     <style>
         .rating{
             margin:20px 0;
@@ -114,7 +114,7 @@
 
 <div style="margin: 0 auto; float: none; padding: 0px; border: 1px solid #e1e1e1; width:100%; max-width:800px;">
     <div style="background: #b3de92; padding: 10px;">
-        <center><img src="/images/anketa-logo.png" ></center>
+        <center><img src="/images/wow-pizza-02.png" ></center>
     </div>
     <div style="background: #fff; padding: 30px 10px; text-align: center;font-size:15px;line-height: 20px;">
         <?if($_GET['rating']>7):?>
