--- a/app/mod_pages/_franchise.html
+++ b/app/mod_pages/_franchise.html
@@ -52,7 +52,7 @@
 </div>
 <div class="why-appetit">
     <div class="container">
-        <h3>ПОЧЕМУ <span>"АППЕТИТ"?</span></h3>
+        <h3>ПОЧЕМУ <span>"WOW! Pizza"?</span></h3>
         <div class="why-appetit-all">
             <div class="why-appetit-items">
                 <img src="/images/franchise/why-1.png" alt="">
