--- a/app/mod_pages/_orders_status.html
+++ b/app/mod_pages/_orders_status.html
@@ -42,7 +42,7 @@
                         <button class="btn btn-red-auth" id="confirm-phone" onclick="confirm_details_order(1);">Подтвердить</button>
                     </div>
                     <div class="confirm-phone-block" id="confirm-phone-block">
-                        <small>Что-бы получить "Код подтверждения" пожалуйста запустите нашего бота в Telegram и следуйте дальнейшим инструкциям<br><br><a href="https://t.me/appetitfood_bot" target="_blank" class="btn btn-tg">Telegram-бот "Аппетит"</a></small>
+                        <small>Что-бы получить "Код подтверждения" пожалуйста запустите нашего бота в Telegram и следуйте дальнейшим инструкциям<br><br><a href="https://t.me/wowpizzaru_bot" target="_blank" class="btn btn-tg">Telegram-бот "WOW! Pizza"</a></small>
                         <input id="conf-code-details-order" class="conf-code" placeholder="_ _ _ _" name="conf-code-details-order" type="tel">
                         <div onclick="confirm_details_order()" class="resend-link" id="other-conf-link"><span class="btn btn-default btn-sm">получить код другим способом</span></div>
                         <div onclick="resend_code();" class="resend-link none" id="resend-link"><span class="btn btn-default btn-sm">отправить повторно</span></div>
