--- a/app/mod_pages/_quiz_history_rolls.html
+++ b/app/mod_pages/_quiz_history_rolls.html
@@ -13,7 +13,7 @@
                     <div class="quiz-answer-block">
                         <span class="quiz-btn" data-value="0">На севере Японии благодаря императору Нарухито</span>
                         <span class="quiz-btn" data-value="2">В Южной Азии, рис использовался как дешевый способ хранения и обработки рыбы</span>
-                        <span class="quiz-btn" data-value="1">Это блюдо привезли из Азии и передали рецепт «Аппетиту»</span>
+                        <span class="quiz-btn" data-value="1">Это блюдо привезли из Азии и передали рецепт «WOW! Pizzaу»</span>
                     </div>
                 </div>
                 <div class="quiz-quest" data-complete="0">
