--- a/app/mod_pages/_quiz_quarantine.html
+++ b/app/mod_pages/_quiz_quarantine.html
@@ -38,7 +38,7 @@
                         @if(d()->city->title == 'Уфа'):
                         <span class="quiz-btn" data-value="6">Слежу только за скидками в Радуге Вкуса-для Уфы!</span>
                         @else:
-                        <span class="quiz-btn" data-value="6">Слежу только за скидками в Аппетит!</span>
+                        <span class="quiz-btn" data-value="6">Слежу только за скидками в WOW! Pizza!</span>
                         @endif;
                         <span class="quiz-btn" data-value="4">Нет, но думаю, скоро все закончится!</span>
                         <span class="quiz-btn" data-value="2">Некогда, есть другие дела</span>
