--- a/app/mod_pages/_ts_creator.html
+++ b/app/mod_pages/_ts_creator.html
@@ -523,7 +523,7 @@ function change_maket(v){
     }else if(v==4){
         m.val('600*600 '+dop);
     }else if(v==5){
-        m.val('Аппетит, 1.макет 1080*1080 «подпишись и получи сет» + промокод  / 2.макет - 1080*1920 с кнопкой хочу / 3.макет 1080*1080 '+dop);
+        m.val('WOW! Pizza, 1.макет 1080*1080 «подпишись и получи сет» + промокод  / 2.макет - 1080*1920 с кнопкой хочу / 3.макет 1080*1080 '+dop);
     }else if(v==6){
         m.val('600*600 с желтой полосой'+dop);
     }
