--- a/app/mod_tpl/delivery.btn.tpl.html
+++ b/app/mod_tpl/delivery.btn.tpl.html
@@ -1,7 +1,7 @@
 <div class="hl-prices">
     <img src="/images/loading.gif" alt="" class="d-loading" id="d-loading">
     <ul id="change-delivery-btns">
-        <li id="delivery_2" class="{active_delivery}" data-type="2" onclick="delivery_change('2', this);">Доставка</li>
-        <li id="delivery_1" class="{active_pickup}" data-type="1" onclick="delivery_change('1', this);">Самовывоз</li>
+<!--        <li id="delivery_2" class="{active_delivery}" data-type="2" onclick="delivery_change('2', this);">Доставка</li>-->
+<!--        <li id="delivery_1" class="{active_pickup}" data-type="1" onclick="delivery_change('1', this);">Самовывоз</li>-->
     </ul>
 </div>
