--- a/app/mod_tpl/export.news.tpl.html
+++ b/app/mod_tpl/export.news.tpl.html
@@ -8,7 +8,7 @@
         <!-- Информация о сайте-источнике -->
         <title>{name}</title>
         <link>https://{url_main}</link>
-        <description>«Аппетит» - служба доставки еды</description>
+        <description>«WOW! Pizza» - служба доставки еды</description>
         <language>ru</language>
         <turbo:analytics id="{counter}" type="Yandex" params=""/>
         <foreach xmlnews_list>
