--- a/app/mod_tpl/modal.tpl.html
+++ b/app/mod_tpl/modal.tpl.html
@@ -507,7 +507,7 @@
                     <div class="reg-block block">
                         <div class="confirm-phone-block block">
                             <small class="auth-hint" id="co-tg-hint">
-                                Что-бы получить "Код подтверждения" пожалуйста запустите нашего бота в Telegram и следуйте дальнейшим инструкциям<br><br><a href="https://t.me/appetitfood_bot" target="_blank" class="btn btn-tg">Telegram-бот "Аппетит"</a>
+                                Что-бы получить "Код подтверждения" пожалуйста запустите нашего бота в Telegram и следуйте дальнейшим инструкциям<br><br><a href="https://t.me/wowpizzaru_bot" target="_blank" class="btn btn-tg">Telegram-бот "WOW! Pizza"</a>
                             </small>
                             <small class="auth-hint none" id="co-hint">
                                 @if(d()->city->send_code_type==1):
@@ -543,7 +543,7 @@
                     <p>Нам очень нравится, когда вы заказываете у нас. Поэтому с ЛЮБОЙ покупки, с КАЖДОЙ покупки в мобильном приложении (даже товаров по акции!) мы возвращаем минимум 10%! А если вы привыкли радовать себя Аппетитными блюдами хотя бы 1 раз месяц - 30% с каждого заказа!</p>
                     <p><strong>Как получить кэшбэк:</strong></p>
                     <ul>
-                        <li>скачать мобильное приложение в <a href="https://play.google.com/store/apps/details?id=appetit.app" target="_blank">Play Market</a> или в <a href="https://apps.apple.com/ru/app/аппетит-доставка-роллов-пиццы/id1558072639" target="_blank">AppStore</a>;</li>
+<!--                        <li>скачать мобильное приложение в <a href="https://play.google.com/store/apps/details?id=appetit.app" target="_blank">Play Market</a> или в <a href="https://apps.apple.com/ru/app/аппетит-доставка-роллов-пиццы/id1558072639" target="_blank">AppStore</a>;</li>-->
                         <li>авторизоваться в личном кабинете;</li>
                         <li>оформить заказ.</li>
                     </ul>
@@ -646,7 +646,7 @@
                         <button class="btn btn-red-auth" id="confirm-cancel" onclick="confirm_cancel_order(1);">Подтвердить</button>
                     </div>
                     <div class="confirm-phone-block" id="confirm-cancel-block">
-                        <small>Что-бы получить "Код подтверждения" пожалуйста запустите нашего бота в Telegram и следуйте дальнейшим инструкциям<br><br><a href="https://t.me/appetitfood_bot" target="_blank" class="btn btn-tg">Telegram-бот "Аппетит"</a></small>
+                        <small>Что-бы получить "Код подтверждения" пожалуйста запустите нашего бота в Telegram и следуйте дальнейшим инструкциям<br><br><a href="https://t.me/wowpizzaru_bot" target="_blank" class="btn btn-tg">Telegram-бот "WOW! Pizza"</a></small>
                         <input id="conf-code-cansel-order" class="conf-code" placeholder="_ _ _ _" name="conf-code-details-order" type="tel">
                         <div onclick="confirm_cancel_order()" class="resend-link" id="other-conf-link-2"><span class="btn btn-default btn-sm">получить код другим способом</span></div>
                         <div onclick="resend_code();" class="resend-link none" id="resend-link-2"><span class="btn btn-default btn-sm">отправить повторно</span></div>
