--- a/app/mod_vacancies/_index.html
+++ b/app/mod_vacancies/_index.html
@@ -9,7 +9,7 @@
                 с зарплатой в {.salary} рублей<br>
                 @endif;
                 в федеральную сеть<br>
-                доставки еды «Аппетит».<br>
+                доставки еды «WOW! Pizza».<br>
             </p>
             @if(!d()->vacancies_list->is_empty):
             <p class="list-vac">
@@ -44,7 +44,7 @@
         </div>
         <div class="desc-vac-advant-wrap">
             <div class="desc-vac-advant">
-                <p>Преимущества работы в команде «Аппетит»</p>
+                <p>Преимущества работы в команде «WOW! Pizza»</p>
                 {.text2}
             </div>
             @if(d()->this->application):
