--- a/app/mod_checkout/_order.html
+++ b/app/mod_checkout/_order.html
@@ -158,7 +158,7 @@
                 <div class="col-lg-4 col-lg-push-1 col-xs-12 cho-receipt {opacity}" id="cho-receipt">
                     <ul>
                         <li><span>Общая сумма</span><span class="sum"><em>{cart_total_price_nd}</em><i class="rub">q</i></span></li>
-                        <li><span>Оплата баллами</span><span class="sum"><em>{points_pay}</em><i class="rub">q</i></span></li>
+<!--                        <li><span>Оплата баллами</span><span class="sum"><em>{points_pay}</em><i class="rub">q</i></span></li>-->
                         <li><span>Скидка по акции</span><span class="sum"><em>{discount_sum}</em><i class="rub">q</i></span></li>
                         <li><span>Сумма заказа с учетом скидок и акций </span><span class="sum"><em>{cart_discount_price}</em><i class="rub">q</i></span></li>
                         @if($_SESSION['delivery']==2):
