Добавил функционал который привязывает заказ к пользователю, если он при заказе не авторизовался

--- a/app/mod_cabinet/_personal.html
+++ b/app/mod_cabinet/_personal.html
@@ -11,7 +11,7 @@
             <h1>Личные данные</h1>
             <div class="alert alert-success {success_alert} mb-25" id="lk-success-alert">{success_message}</div>
             <div class="alert alert-danger {error_alert} mb-25" id="lk-error-alert">{error_message}</div>
-            <div class="row">
+            <!--<div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-12">
                     <div class="lk-pers-line">
                         <span class="ttl">Баланс:</span>
@@ -22,7 +22,7 @@
                         @endif;
                     </div>
                 </div>
-            </div>
+            </div>-->
             <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-12">
                 <div class="lk-pers-line">
@@ -48,7 +48,7 @@
                         <a href="#" title="Редактировать" onclick="change_phone();"><span id="lk-phone-number">{.phone}</span><i class="mdi mdi-pencil-outline"></i></a>
                     </div>
                 </div>
-                <div class="lk-pers-line">
+                <!--<div class="lk-pers-line">
                     <span class="ttl">E-mail:</span>
                     <div class="lk-pers-data">
                         <div class="lk-pers-info">
@@ -68,7 +68,7 @@
                         </div>
                         <img src="/images/loading.gif" alt="" class="load">
                     </div>
-                </div>
+                </div>-->
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12">
                 <div class="lk-pers-line">
