--- a/app/mod_checkout/_index.html
+++ b/app/mod_checkout/_index.html
@@ -37,7 +37,7 @@
                     </div>
                     <p class="ch-promocode {p_promo}">{promocode}</p>
                 </div>
-                <div class="ch-d {p_payment}" id="ch-d-points">
+                <!--<div class="ch-d {p_payment}" id="ch-d-points">
                     <span>Оплата баллами: <img src="/images/loading.gif" class="checkout-load" alt=""></span>
                     <div class="{np_payment}">
                         <input type="text" name="points" placeholder="Оплата баллами" value="" class="onlynumber" data-quest="{data_guest}" />
@@ -45,7 +45,7 @@
                         <em class="error">{error_text}</em>
                     </div>
                     <p class="ch-pay-points {p_payment}">{ppay_text}</p>
-                </div>
+                </div>-->
 
                 <!--<div class="ch-d ch-d-bd">
                     <span class="forxs">День рождения?</span>
